--- a/buildcfg.ini
+++ b/buildcfg.ini
@@ -1,5 +1,5 @@
 [Make]
 PROJECT_NAME=minizip
 PROJECT_FILE=minizip.vcxproj
-PROJECT_PATH=.
+PROJECT_PATH=vs
 COMPILE_SCRIPT=%__script_path%\run_msbuild.bat
